feat: add photodto to input and output for artist
